testsuite/poke.pkl/promo-array-return-diag-1.pk
/* { dg-do compile } */

defun foo = int[3]: { return [1,2]; }  /* { dg-error "" } */
